# lab-5-7-test0

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/actions/cache-cmake-deps/: action.yml
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/resource_core/: CMakeLists.txt
src/resource_core/include/: document.hpp  documentBuilder.hpp  indexError.hpp  indexStore.hpp  invertedIndex.hpp  updateTransaction.hpp
src/resource_core/src/: document.cpp  documentBuilder.cpp  indexError.cpp  indexStore.cpp  invertedIndex.cpp  updateTransaction.cpp
tests/: CMakeLists.txt  tests.cpp
